# syrillian

./: Cargo.toml  Cross.toml  README.md  flake.nix
.github/workflows/: build.yml  tests.yml
examples/: bones.rs  my-main.rs  necoarc.rs  parenting_and_object_types.rs  simple_transformations.rs
examples/bones/: main.rs
examples/dynamic_shader/: main.rs  shader.wgsl
examples/my-main/: camera_controller.rs  main.rs  player_movement.rs
examples/necoarc/: main.rs
src/: app.rs  buffer.rs  lib.rs  object.rs  renderer.rs  scene_loader.rs  state.rs  world.rs
src/asset_management/: assetmanager.rs  bindgroup_layout_manager.rs  materialmanager.rs  mesh.rs  meshmanager.rs  mod.rs  shadermanager.rs  texturemanager.rs
src/components/: camera.rs  collider.rs  freecam.rs  gravity.rs  light.rs  mod.rs  rigid_body.rs  rotate.rs
src/drawables/: drawable.rs  image.rs  mesh_renderer.rs  mod.rs
src/engine/: mod.rs  world.rs
src/engine/asset_management/: assetmanager.rs  bindgroup_layout_manager.rs  materialmanager.rs  mesh.rs  meshmanager.rs  mod.rs  scene_loader.rs  shadermanager.rs  texturemanager.rs
src/engine/assets/: asset_store.rs  bind_group_layout.rs  generic_store.rs  handle.rs  material.rs  mesh.rs  mod.rs  scene_loader.rs  shader.rs  sound.rs  texture.rs
src/engine/audio/: audio.rs
src/engine/components/: audio.rs  camera.rs  collider.rs  fp_camera.rs  fp_camera_controller.rs  fp_movement.rs  fp_player_controller.rs  freecam.rs  gravity.rs  light.rs  mod.rs  rigid_body.rs  rope.rs  rotate.rs
src/engine/core/: bone.rs  mesh.rs  mod.rs  object.rs  object_extensions.rs  transform.rs  vertex.rs
src/engine/drawables/: camera_debug.rs  drawable.rs  image.rs  mesh_renderer.rs  mod.rs
src/engine/input/: gamepad_manager.rs  input_manager.rs  mod.rs
src/engine/physics/: mod.rs  simulator.rs
src/engine/prefabs/: camera.rs  cube.rs  first_person_player.rs  mod.rs  sphere.rs
src/engine/rendering/: context.rs  (+7 more)
src/input/: input_manager.rs
src/shaders/: fallback_shader3d.wgsl  fullscreen_passhthrough.wgsl  shader2d.wgsl  shader3d.wgsl
src/utils/: buffer.rs  frame_counter.rs  iter.rs  math.rs  mod.rs  sizes.rs
src/windowing/: app.rs  mod.rs  state.rs
syrillian/: Cargo.toml  Cross.toml  build.rs
syrillian/examples/: bones.rs  my-main.rs  necoarc.rs  parenting_and_object_types.rs  pbr.rs  simple_transformations.rs
syrillian/examples/dynamic_shader/: main.rs  shader.wgsl  shader2.wgsl  shader3.wgsl
syrillian/src/: lib.rs
syrillian/src/engine/: mod.rs  world.rs
syrillian/src/engine/assets/: asset_store.rs  bind_group_layout.rs  cubemaps.rs  font.rs  generic_store.rs  handle.rs  key.rs  material.rs  mod.rs  scene_loader.rs  sound.rs  texture.rs
syrillian/src/engine/assets/font/: mod.rs
syrillian/src/engine/assets/mesh/: builder.rs  mod.rs
syrillian/src/engine/assets/scene_loader/: bones.rs  meshes.rs  mod.rs  textures.rs
syrillian/src/engine/assets/shader/: mod.rs  shader_gen.rs
syrillian/src/engine/assets/shader/shaders/: default_vertex3d.wgsl  default_vertex_post.wgsl  fallback_shader3d.wgsl  fullscreen_passthrough.wgsl  mod.rs  picking_mesh.wgsl  picking_text2d.wgsl  picking_text3d.wgsl  picking_ui.wgsl  shader2d.wgsl  shader3d.wgsl  text2d.wgsl  text3d.wgsl
syrillian/src/engine/assets/shader/shaders/debug/: edges.wgsl  light.wgsl  lines.wgsl  rays.wgsl  text2d_geometry.wgsl  text3d_geometry.wgsl  vertex_normals.wgsl
syrillian/src/engine/assets/shader/shaders/groups/: basic.wgsl  cubemap.wgsl  light.wgsl  material.wgsl  model.wgsl  post_process.wgsl  render.wgsl
syrillian/src/engine/assets/shader/shaders/skybox/: skybox_cubemap.wgsl
syrillian/src/engine/audio/: mod.rs
syrillian/src/engine/components/: animation.rs  audio.rs  button.rs  camera.rs  camera_debug.rs  collider.rs  fp_camera.rs  fp_movement.rs  freecam.rs  gravity.rs  image.rs  light.rs  mesh_renderer.rs  mod.rs  panel.rs  rigid_body.rs  rope.rs  rotate.rs  skeletal.rs  skybox.rs  spring.rs  ui_rect.rs
syrillian/src/engine/components/text/: glyph.rs  mod.rs  msdf_atlas.rs
syrillian/src/engine/core/: bone.rs  bounds.rs  component_storage.rs  mod.rs  object.rs  object_extensions.rs  transform.rs  vertex.rs
syrillian/src/engine/drawables/: camera_debug.rs  drawable.rs  image.rs  mesh_renderer.rs  mod.rs  text2d.rs
syrillian/src/engine/drawables/text/: glyph.rs  mod.rs  msdf_atlas.rs  text_layouter.rs
syrillian/src/engine/input/: gamepad_manager.rs  input_manager.rs  mod.rs
syrillian/src/engine/physics/: mod.rs  simulator.rs
syrillian/src/engine/prefabs/: camera.rs  cube.rs  first_person_player.rs  mod.rs  prefab.rs  sphere.rs  sun.rs
syrillian/src/engine/rendering/: context.rs  debug_renderer.rs  light_manager.rs  lights.rs  message.rs  mod.rs  offscreen_surface.rs  picking.rs  post_process_pass.rs  render_data.rs  renderer.rs  state.rs  texture_export.rs  uniform.rs
syrillian/src/engine/rendering/cache/: asset_cache.rs  bind_group_layout.rs  font.rs  generic_cache.rs  material.rs  mesh.rs  mod.rs  texture.rs
syrillian/src/engine/rendering/cache/font/: glyph.rs  mod.rs  msdf_atlas.rs
syrillian/src/engine/rendering/cache/shader/: builder.rs  mod.rs
syrillian/src/engine/rendering/proxies/: debug_proxy.rs  image.rs  mesh_proxy.rs  mod.rs  skybox_proxy.rs  text_proxy.rs
syrillian/src/engine/rendering/strobe/: frame.rs  image.rs  mod.rs  renderer.rs  text.rs  ui_element.rs
syrillian/src/utils/: animation.rs  checks.rs  color.rs  frame_counter.rs  hacks.rs  iter.rs  math.rs  mod.rs
syrillian/src/windowing/: app.rs  game_thread.rs  mod.rs  state.rs
syrillian/testmodels/hampter/: hampter.fbx
syrillian/testmodels/testmap/: testmap.blend  testmap.fbx
syrillian/tests/: asset_store.rs  audio.rs  components.rs  scene_loader.rs  transform.rs  utils_iter.rs  utils_math.rs  vertex.rs  world.rs
syrillian_macros/: Cargo.toml
syrillian_macros/src/: lib.rs
syrillian_utils/: Cargo.toml
syrillian_utils/src/: lib.rs  logging.rs
testmodels/hampter/: hampter.fbx
testmodels/testmap/: testmap.blend  testmap.fbx
tests/: transform.rs  vertex.rs  world.rs
(+29 files in other folders)
