#################################################
#                Workspace Meta                 #
#################################################



[workspace]
resolver = "2"
members = [
    "syrillian",
    "syrillian_macros",
    "syrillian_utils"
]

[workspace.package]
version = "0.3.1"
license = "MIT"
edition = "2024"
repository = "https://github.com/Kek5chen/syrillian"
authors = ["Kek5chen"]


#################################################
#                Build Profiles                 #
#################################################



[profile.dev]
opt-level = 2

[profile.release]
opt-level = 2
codegen-units = 1
lto = "fat"
panic = "abort"

[workspace.dependencies]
syrillian_utils = { version = "0.3.0", path = "syrillian_utils", default-features = false }
syrillian_macros = { version = "0.3.0", path = "syrillian_macros", default-features = false }

[workspace.dependencies.tokio]
version = "1.47"
features = ["rt", "rt-multi-thread", "macros", "sync"]
