[package]
name = "syrillian_macros"
description = "Macros used by the Syrillian game engine"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
syn = { version = "2.0", features = ["full", "printing", "derive"] }
quote = "1.0"
syrillian_utils.workspace = true
tokio.workspace = true
env_logger = { version = "0.11", optional = true }

[lib]
proc-macro = true

[features]
default = [ "derive_env_logger" ]
derive_env_logger = ["dep:env_logger"]
