[package]
name = "syrillian_macros"
description = "Macros used by the Syrillian game engine"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
syn = { version = "2.0", features = ["full", "printing", "derive"] }
quote = "1.0"
syrillian_utils.workspace = true
tracing-subscriber = { version = "0.3", optional = true }

[lib]
proc-macro = true

[features]
default = ["derive_tracing_subscriber"]
derive_tracing_subscriber = ["dep:tracing-subscriber"]
